# kOS

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  clean.sh  config.sh  default-host.sh  dfs-standard  dfs-standard.md  grub.cfg  headers.sh  iso.sh  qemu.sh
.github/workflows/: c-cpp.yml  main.yml
BuildScripts/: Utilities.cmake
EFI/: CMakeLists.txt
EFI/Includes/EFI/: Entry.h
EFI/Sources/: Main.c
Kernel/: CMakeLists.txt
Kernel/Includes/: Timing.h
Kernel/Includes/Kernel/: TerminalIO.h
Kernel/Sources/IRQ/: IDT.c  IDT.h  IDT.s  LoadIDT.s  ReadWritePort.s
Kernel/Sources/Kernel/: Kernel.c  Main.c
Kernel/Sources/Kernel/GDT/: Flush.s  GDT.c  GDT.h  GDTFlush.s
Kernel/Sources/Keyboard/: Keyboard.c  Keyboard.h  KeyboardHandler.s  KeyboardMap.h  Map.h
Unused/: README.md
Unused/stage1boot/: bootloader.asm
bootloader/: Makefile
bootloader/stage2/: Makefile  bootloader.asm
kernel/: Makefile
kernel/arch/i386/: bootloader.S  make.config  terminalio.c  vga.c  vga.h
kernel/include/: stdlib.h  timing.h
kernel/include/kernel/: terminalio.h
kernel/irq/: idt.c  idt.h  loadidt.S  readwriteport.S
kernel/kernel/: kernel.c  timing.c
kernel/kernel/gdt/: gdt.c  gdt.h  gdtflush.S
kernel/keyboard/: kbhandler.S  kbmap.h  keyboard.c  keyboard.h
libc/: CMakeLists.txt  Makefile
libc/Includes/: stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
libc/Includes/sys/: cdefs.h
libc/Sources/stdio/: putchar.c
libc/include/: string.h
libc/include/sys/: cdefs.h
libc/stdio/: printf.c  putchar.c
libc/stdlib/: abort.c
libc/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strlen.c
os/: Makefile  kernel.c
os/include/: stdlib.h  timing.h  vgaterminalio.h
stage1boot/: bootloader.asm
